--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,31 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: #333;
     color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1000;
 }
 
 nav .left, nav .right {
@@ -34,6 +50,7 @@ section {
 }
 
 h2 {
+    font-size: xx-large;
     color: #333;
 }
 
@@ -45,7 +62,8 @@ h2 {
 
 .text {
     flex: 1;
-    padding-right: 20px;
+    margin-top: 30px;
+    margin-left: 80px;
 }
 
 .image {
@@ -53,23 +71,23 @@ h2 {
 }
 
 #me {
-    width: 30%;
+    width: 40%;
     height: auto;
     border-radius: 50%;
     display: block;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
-.big {
-    font-size: 2em;
-}
-
-.giant {
+.bigHome {
     font-size: 3em;
 }
 
-.medium {
-    font-size: 1.1em;
+.giantHome {
+    font-size: 5em;
+}
+
+.mediumHome {
+    font-size: 1.2em;
 }
 
 .center {
@@ -91,11 +109,33 @@ h2 {
     margin-bottom: 20px;
 }
 
+.big {
+    font-size: large;
+}
+
+.medium {
+    font-size: small;
+}
+
+.path-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.path-item {
+    width: 30%;
+    text-align: center;
+    margin: 20px;
+}
+
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
+    padding: 10px;
 }
