--- a/styles.css
+++ b/styles.css
@@ -95,12 +95,21 @@ h2 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.bigHome {
-    font-size: 2.5em;
+h1 {
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    font-size: clamp(3rem, 10vw, 4rem);
+    padding: 0rem clamp(1rem, 2vw, 3rem);
+    border-radius: clamp(0.4rem, 0.75vw, 1rem);
 }
 
-.giantHome {
-    font-size: 4em;
+h1:hover {
+    background-color: white;
+    color: black;
+}
+
+.bigHome {
+    font-size: 2.5em;
 }
 
 .mediumHome {
@@ -262,6 +271,121 @@ h3 {
     flex-wrap: wrap; 
     padding-top: 20px;
     padding-bottom: 40px;
+}
+
+#cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 30px;
+}
+
+.card {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    cursor: pointer;
+    height: 360px;
+    position: relative;
+    width: 500px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    margin-right: 120px;
+    margin-bottom: 50px;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card-content {
+    position: relative;
+    z-index: 2;
+}
+
+.card-content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: opacity 0.3s ease;
+}
+
+.card:hover .card-content img {
+    opacity: 0;
+}
+
+.card-content h3,
+.card-content h4 {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.card-content h3 {
+    padding-top: 120px;
+}
+
+.card:hover .card-content h3,
+.card:hover .card-content h4 {
+    opacity: 1;
+}
+
+#cards:hover > .card::after {
+    opacity: 1;
+}
+
+.card:hover::before {
+    opacity: 1;
+}
+
+.card::before,
+.card::after {
+    border-radius: inherit;
+    content: "";
+    height: 100%;
+    left: 0px;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    transition: opacity 500ms;
+    width: 100%;
+}
+
+.card::before {
+    background: radial-gradient(
+      800px circle at var(--mouse-x) var(--mouse-y), 
+      rgba(255, 255, 255, 0.06),
+      transparent 40%
+    );
+    z-index: 3;
+}
+  
+.card::after {  
+    background: radial-gradient(
+        600px circle at var(--mouse-x) var(--mouse-y), 
+        rgba(255, 255, 255, 0.4),
+        transparent 40%
+    );
+    z-index: 1;
+}
+
+.card > .card-content {
+    background-color: var(--card-color);
+    border-radius: inherit;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    inset: 1px;
+    padding: 10px;
+    position: absolute;
+    z-index: 2;
 }
 
 footer {
