--- a/styles.css
+++ b/styles.css
@@ -221,8 +221,21 @@ h1:hover {
     font-style: italic;
 }
 
-.project {
-    margin-bottom: 20px;
+#image-track {
+    display: flex;
+    gap: 4vmin;
+    position: relative;
+    transform: translate(0%, -50%); 
+    user-select: none; /* -- Prevent image highlighting -- */
+    margin-top: 300px;
+    margin-bottom: -280px;
+}
+  
+#image-track > .image {
+    width: 40vmin;
+    height: 56vmin;
+    object-fit: cover;
+    object-position: 100% center;
 }
 
 .big {
@@ -237,7 +250,6 @@ h1:hover {
     position: relative;
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
 }
 
 .timeline-item {
@@ -276,7 +288,7 @@ h3 {
 
 #path {
     padding-top: 20px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 }
 
 .image-container {
@@ -433,83 +445,27 @@ h3 {
     flex: 1;
     margin: 10px;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    cursor: pointer;
-    height: 100px;
-    position: relative;
-    overflow: hidden;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
     transition: transform 0.3s ease;
+    cursor: pointer;
+    height: 120px;
 }
-
 .certificate-box:hover {
     transform: scale(1.05);
 }
-
+.certificate-box h3 {
+    color: #333;
+}
 .certificate-box p {
-    position: relative;
-    z-index: 2;
-    text-align: center;
-    margin: 0;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
-
-.certificate-box:hover h3,
 .certificate-box:hover p {
     opacity: 1;
 }
-
-.certificate-box h3 {
-    position: relative;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
-}
-
-.certificate-box::before,
-.certificate-box::after {
-    border-radius: inherit;
-    content: "";
-    height: 100%;
-    left: 0px;
-    opacity: 0;
-    position: absolute;
-    top: 0px;
-    transition: opacity 500ms;
-    width: 100%;
-}
-
-.certificate-box::before {
-    background: radial-gradient(
-        800px circle at var(--mouse-x) var(--mouse-y),
-        rgba(255, 255, 255, 0.06),
-        transparent 40%
-    );
-    z-index: 3;
-}
-
-.certificate-box::after {
-    background: radial-gradient(
-        600px circle at var(--mouse-x) var(--mouse-y),
-        rgba(255, 255, 255, 0.4),
-        transparent 40%
-    );
-    z-index: 1;
-}
-
-.certificate-box > .cert-content {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: inherit;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    inset: 1px;
-    padding: 10px;
-    position: absolute;
-    z-index: 2;
-}
-
 #certs {
     display: flex;
     justify-content: space-around;
