--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: radial-gradient(circle at 24.1% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.4%);
+    background: radial-gradient(circle at 24.1% 68.8%, rgb(20, 20, 20) 0%, rgb(0, 0, 0) 99.4%);
 }
 
 main {
@@ -228,22 +228,59 @@ h1:hover {
     height: 80%;
     margin: auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.06);
     border-radius: 30px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    position: relative;
 }
 
-.gallery img {
+.gallery-images {
+    display: flex;
+}
+
+.gallery-image {
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 10px;
     max-height: 400px;
     width: auto;
     object-fit: cover;
+}
+
+.gallery img {
+    height: 400px;
+    width: auto;
     border-radius: 30px;
+}
+
+button {
+    position: absolute;
+    top: 50%;
+    background-color: transparent;
+    border: none;
+    color: #cccccc;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button i {
+    border: 2px solid #cccccc;
+    background-color: #cccccc;
+    color: #333;
+    border-radius: 50%;
+    padding: 8px;
+}
+
+.prev-btn {
+    left: 10px;
+}
+
+.next-btn {
+    right: 10px;
 }
 
 .big {
