--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ h1:hover {
 
 .gallery {
     width: 80%;
-    height: 80%;
+    height: 650px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -240,26 +240,65 @@ h1:hover {
 
 .gallery-images {
     display: flex;
+    transition: transform 1s ease;
 }
 
 .gallery-image {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    max-height: 400px;
-    width: auto;
-    object-fit: cover;
+    flex: 0 0 auto;
+    margin: 0 50px;
+    min-width: 300px;
+    max-width: 500px;
+    overflow: hidden;
+    transition: transform 1s ease;
 }
 
-.gallery img {
-    height: 400px;
+.image-wrapper {
+    border-radius: 80px;
+    overflow: hidden;
+}
+
+.first {
+    margin-left: -300px;
+}
+
+.last {
+    margin-right: 100px;
+}
+
+.gallery-image img {
+    height: 500px;
     width: auto;
     border-radius: 30px;
 }
 
-button {
+.zoomed {
+    transform: scale(1.2);
+}
+
+.zoomed-text {
+    opacity: 0;
+    text-align: center;
+    color: white;
     position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    transition: opacity 0.2s ease;
+    line-height: 25px;
+}
+
+.gallery-image.zoomed .zoomed-image {
+    opacity: 0.2;
+}
+
+.gallery-image.zoomed .zoomed-text {
+    display: block;
+    opacity: 1;
+}
+
+button {
+    position: absolute;
     background-color: transparent;
     border: none;
     color: #cccccc;
@@ -272,7 +311,7 @@ button i {
     background-color: #cccccc;
     color: #333;
     border-radius: 50%;
-    padding: 8px;
+    padding: 8px 12px 8px 12px;
 }
 
 .prev-btn {
@@ -300,7 +339,7 @@ button i {
 .timeline-item {
     position: relative;
     flex: 1;
-    padding: 20px;
+    padding: 90px;
     background: #858585;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -318,6 +357,10 @@ button i {
     opacity: 1;
 }
 
+.timeline-item:hover h3 {
+    opacity: 0;
+}
+
 .timeline-item p {
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -332,23 +375,11 @@ h3 {
     padding-bottom: 20px;
 }
 
-.image-container {
-    position: relative;
-    overflow: hidden;
-    height: 250px;
-}
-
-.image-container img {
-    width: 100%;
-    height: auto;
-    transition: opacity 0.3s ease;
-    margin: -150px 0 0 0; 
-}
-
 .text-content {
     position: absolute;
     top: 0;
-    left: 10;
+    left: 0;
+    padding-left: 20px;
     width: 90%;
     height: 100%;
     display: flex;
@@ -357,10 +388,6 @@ h3 {
     align-items: center;
     opacity: 0;
     transition: opacity 0.3s ease;
-}
-
-.timeline-item:hover .image-container img {
-    opacity: 0;
 }
 
 .timeline-item:hover .text-content {
