--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilos globais */
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -8,6 +9,7 @@ body {
     background: radial-gradient(circle at 24.1% 68.8%, rgb(20, 20, 20) 0%, rgb(0, 0, 0) 99.4%);
 }
 
+/* Estilos para o cursor */
 .cursor {
     width: 20px;
     height: 20px;
@@ -34,6 +36,7 @@ body {
     animation: cursorAnim2 .5s infinite alternate;
 }
 
+/* Animações para o cursor */
 @keyframes cursorAnim {
     from {
         transform: scale(1);
@@ -65,11 +68,13 @@ body {
     }
 }
 
+/* Classe para expandir o cursor */
 .expand {
     animation: cursorAnim3 .5s forwards;
     border: 1px solid #cccccc;
 }
 
+/* Classe para ocultar elementos */
 .hidden {
     opacity: 0;
     filter: blur(5px);
@@ -77,48 +82,21 @@ body {
     transition: all 1s;
 }
 
+/* Estilos para redução de animação dos elementos quando ocultados */
 @media(prefers-reduced-motion) {
     .hidden {
         transition: none;
     }
 }
 
+/* Classe para mostrar elementos ocultados */
 .show {
     opacity: 1;
     filter: blur(0);
     transform: translateX(0);
 }
 
-.name-screen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: radial-gradient(circle at 24.1% 68.8%, rgb(20, 20, 20) 0%, rgb(0, 0, 0) 99.4%);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-}
-
-.huge-name {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 10rem;
-    color: #ffffff;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    margin-top: 100px;
-    opacity: 0; /* Start with opacity 0 for fade-in effect */
-    transition: opacity 1s ease-out; /* Apply transition only for opacity */
-}
-
-.fade-out {
-    opacity: 0; /* Opacity set to 0 when fade-out class is applied */
-    transition: opacity 1s ease;
-}
-
+/* Estilos para o conteúdo principal */
 main {
     flex: 1;
     display: flex;
@@ -127,18 +105,21 @@ main {
     justify-content: center;
 }
 
+/* Estilos para as secções */
 section {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     padding-left: 40px;
     padding-right: 40px;
 }
 
+/* Estilos para os títulos das secções */
 h2 {
     font-size: xx-large;
     color: #cccccc;
 }
 
+/* Estilos para a secção principal */
 #home {
     display: flex;
     justify-content: space-between;
@@ -146,6 +127,7 @@ h2 {
     padding-top: 40px;
 }
 
+/* Estilos para o texto */
 .text {
     flex: 1;
     margin-top: 100px;
@@ -153,10 +135,12 @@ h2 {
     color: #cccccc;
 }
 
+/* Estilo para a foto de perfil */
 .image {
     flex: 1;
 }
 
+/* Estilos para os ícones sociais */
 .social-icons a {
     color: #cccccc;
     font-size: 30px;
@@ -164,10 +148,12 @@ h2 {
     transition: color 0.3s ease;
 }
 
+/* Estilos para os ícones sociais quando em hover */
 .social-icons a:hover {
     color: #444444;
 }
 
+/* Estilos para o endereço de e-mail */
 .mail {
     color: #cccccc;
     font-size: 20px;
@@ -176,14 +162,16 @@ h2 {
     align-items: center;
 }
 
+/* Estilos para a disposição do botão do CV */
 .cv {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
+/* Estilos para o botão do CV */
 .cv a {
     text-decoration: none;
     color: #fff;
@@ -197,11 +185,13 @@ h2 {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+/* Estilos para o botão do CV quando em hover */
 .cv a:hover {
     background-color: #696969;
     color: #fff;
 }
 
+/* Estilos para o nome */
 h1 {
     font-family: 'Source Code Pro', monospace;
     font-weight: bold;
@@ -210,11 +200,13 @@ h1 {
     border-radius: clamp(0.4rem, 0.75vw, 1rem);
 }
 
+/* Estilos para o nome quando em hover */
 h1:hover {
     background-color: white;
     color: black;
 }
 
+/* Tamanho do texto na secção principal */
 .bigHome {
     font-size: 2.5em;
 }
@@ -223,6 +215,7 @@ h1:hover {
     font-size: 1.15em;
 }
 
+/* Estilos para a disposição do conteúdo da secção principal */
 .center {
     text-align: center;
 }
@@ -234,6 +227,7 @@ h1:hover {
     justify-content: center;
 }
 
+/* Estilos para a fotografia de perfil */
 #me {
     width: 99%;
     height: auto;
@@ -241,6 +235,20 @@ h1:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     position: relative;
     z-index: 2;
+}
+
+/* Estilos para a caixa em volta da fotografia de perfil */
+.box {
+    margin-top: 100px;
+    margin-bottom: 20px;
+    position: relative;
+    width: 300px;
+    height: 375px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .box span {
@@ -251,6 +259,7 @@ h1:hover {
     z-index: 1;
 }
 
+/* Estilos para o efeito em volta da fotografia de perfil */
 .border-blur {
     position: absolute;
     width: 300px;
@@ -261,19 +270,6 @@ h1:hover {
     justify-content: center;
     filter: blur(100px);
     z-index: 0;
-}
-
-.box {
-    margin-top: 100px;
-    margin-bottom: 20px;
-    position: relative;
-    width: 300px;
-    height: 400px;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
 }
 
 .border-blur::before,
@@ -323,6 +319,7 @@ h1:hover {
     }
 }
 
+/* Estilos para a galeria de fotografias */
 .gallery {
     width: 100%;
     height: 650px;
@@ -344,6 +341,13 @@ h1:hover {
     transition: transform 1s ease;
 }
 
+/* Estilos para cada container que contém uma fotografia */
+.image-wrapper {
+    border-radius: 80px;
+    overflow: hidden;
+}
+
+/* Estilo para cada fotografia */
 .gallery-image {
     flex: 0 0 auto;
     margin: 0 50px;
@@ -353,29 +357,18 @@ h1:hover {
     transition: transform 1s ease;
 }
 
-.image-wrapper {
-    border-radius: 80px;
-    overflow: hidden;
-}
-
-.first {
-    margin-left: -300px;
-}
-
-.last {
-    margin-right: 50px;
-}
-
 .gallery-image img {
     height: 500px;
     width: auto;
     border-radius: 30px;
 }
 
+/* Animação para dar zoom à imagem que está a ser vista */
 .zoomed {
     transform: scale(1.2);
 }
 
+/* Estilos para o texto e a imagem quando é feito o zoom */
 .zoomed-text {
     opacity: 0;
     text-align: center;
@@ -398,6 +391,16 @@ h1:hover {
     opacity: 1;
 }
 
+/* Disposição da primeira e última imagem relativamente à galeria */
+.first {
+    margin-left: 100px;
+}
+
+.last {
+    margin-right: 25px;
+}
+
+/* Estilos para os botões de navegação da galeria */
 button {
     position: absolute;
     background-color: transparent;
@@ -423,6 +426,7 @@ button i {
     right: 10px;
 }
 
+/* Tamanho do texto na galeria */
 .big {
     font-size: larger;
 }
@@ -431,6 +435,7 @@ button i {
     font-size: medium;
 }
 
+/* Estilos para a secção dos projetos */
 #cards {
     display: flex;
     flex-wrap: wrap;
@@ -438,6 +443,7 @@ button i {
     padding-top: 200px;
 }
 
+/* Estilos para cada projeto */
 .card {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 20px;
@@ -454,28 +460,9 @@ button i {
     color: #000;
 }
 
-.card:hover {
-    transform: scale(1.05);
-}
-
 .card-content {
     position: relative;
     z-index: 2;
-}
-
-.card-content img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    transition: opacity 0.3s ease;
-}
-
-.card:hover .card-content img {
-    opacity: 0;
 }
 
 .card-content h3,
@@ -491,6 +478,27 @@ button i {
 
 .card-content h3 {
     padding-top: 120px;
+}
+
+/* Estilos para a imagem de cada projeto */
+.card-content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: opacity 0.3s ease;
+}
+
+/* Animações para cada projeto e seu conteúdo quando em hover */
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card:hover .card-content img {
+    opacity: 0;
 }
 
 .card:hover .card-content h3,
@@ -549,6 +557,22 @@ button i {
     z-index: 2;
 }
 
+/* Estilos para a secção dos certificados */
+#certsSec {
+    padding-top: 300px;
+    padding-bottom: 200px;
+}
+
+#certs {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap; 
+    padding-top: 150px;
+    padding-bottom: 20px;
+}
+
+/* Estilos para cada caixa que contém um certificado */
 .certificate-box {
     flex: 1;
     margin: 10px;
@@ -562,10 +586,7 @@ button i {
     height: 120px;
 }
 
-.certificate-box:hover {
-    transform: scale(1.05);
-}
-
+/* Estilos para o seu conteúdo */
 .certificate-box h3 {
     color: #333;
 }
@@ -575,19 +596,16 @@ button i {
     transition: opacity 0.3s ease;
 }
 
+/* Animações para cada certificado quando em hover */
+.certificate-box:hover {
+    transform: scale(1.05);
+}
+
 .certificate-box:hover p {
     opacity: 1;
 }
 
-#certs {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap; 
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
+/* Estilos para o footer da página */
 footer {
     background-color: #333;
     color: #fff;
