--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ button i {
 .certificate-box {
     flex: 1;
     margin: 10px;
-    padding: 20px;
+    padding: 30px 20px 40px 20px;
     background: #858585;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -594,6 +594,7 @@ button i {
 .certificate-box p {
     opacity: 0;
     transition: opacity 0.3s ease;
+    padding-top: 10px;
 }
 
 /* Animações para cada certificado quando em hover */
